@@ -15,6 +15,8 @@ NEW FEATURES
   - Added support for panning and zooming to ImageViz. A clickable thumbnail
   	image was also added and is displayed for navigation purposes when zoomed
   	in.
+  - Added a cursor to the XY plot to indicate the current data point in a
+    series.
 
 BUG FIXES
 
